Fix html alignment

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@ html {
 
 *, *::before, *::after {
   box-sizing: inherit;
-
 }
 
 .cards {
@@ -36,6 +35,7 @@ html {
 .cards strong {
   display: block;
   margin-bottom: 1rem;
+
   font-size: 1.125rem;
 }
 
@@ -44,6 +44,12 @@ html {
 }
 
 .cards dt {
+  display: inline-block;
+  width: 6em;
+  font-style: italic;
+}
+
+.cards dd {
   display: inline-block;
   margin: 0;
   min-width: 9em;
